crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__method__empty_block.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/method/empty_block.lox
---
success: true
exit_code: 0
----- stdout -----
nil

----- stderr -----
