crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__method__refer_to_name.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/method/refer_to_name.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: Undefined variable `method`.
   ╭─[craftinginterpreters/test/method/refer_to_name.lox:3:11]
   │
 3 │     print method; // expect runtime error: Undefined variable 'method'.
   │           ──────  
───╯
