crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__method__too_many_parameters.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/method/too_many_parameters.lox
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
